--- a/common.css
+++ b/common.css
@@ -24,9 +24,12 @@ h1 {
 h2 {
   font-size: 1.5rem;
   border-left: 6px solid #1976d2;
-  padding-left: 0.7em;
+  padding: 0.8em 0 0.8em 0.7em;
   background: #e3f2fd;
   margin-top: 2em;
+  margin-bottom: 1.2em;
+  color: #1a237e;
+  line-height: 1.3;
 }
 h3 {
   font-size: 1.2rem;
